# funda

./: .gitignore  .golangci.yaml  .ruff.toml  AGENTS.md  Justfile  LICENSE  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: code-quality.yml
cmd/funda/: main.go  version.go
contrib/: funda.example.yaml
internal/config/: config.go  schema.go  types.go
internal/data/: cache.go  eastmoney.go  fetcher.go  parser.go  sina.go  types.go
internal/eastmoney/: client.go
internal/sina/: client.go
internal/telemetry/log/: log.go
internal/version/: version.go
internal/view/: card.go  help.go  keymap.go  model.go  render.go  run.go  search.go  state.go  update.go
src/funda/: __init__.py  app.py  config.py  data.py  main.py  widget.py
