[project]
name = "funda"
version = "1.0.0"
description = "A terminal-based application for tracking and analyzing financial funds, providing users with real-time data and insights to make informed investment decisions."
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["akshare>=1.18.57", "pyyaml>=6.0.3", "textual>=8.2.3"]

[project.scripts]
funda = "funda.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/funda"]

[tool.hatch.build.targets.wheel]
packages = ["src/funda"]
